# RightGBM

./: .gitignore  LICENSE  Makefile  README.md  juliapkg.json  pyproject.toml  synclib.py  tox.ini
docs/: requirements.txt
docs/jupyternb/: rightgbm
julia_env/: Manifest.toml  Project.toml
julia_env/pyjuliapkg/: juliapkg.json  meta.json
rightgbm/: README.md  __init__.py
rightgbm/data/: __init__.py  _data_loader.py  _load_bi.py  bi.sh
rightgbm/dev/: __init__.py  _checker.py
rightgbm/dev/julia/: __init__.py  _pkg.py  juliapkg.json
rightgbm/dev/r/: __init__.py  _robjects.py
rightgbm/feature_extractor/: GOBase.jl  gprofiler.R
sandbox/: Dockerfile  auth.sh  docker-compose.yml  init.sh  jupyternb  lib.sh  readme.md  rightgbm  writelib.sh
sandbox/config/: julia_env  juliapkg.json  requirements.txt  sandbox_reqs.txt
tests/: __init__.py  test_rightgbm.py
